Cleanup some Eclipse warnings